# shorty

./: .dockerignore  .env-sample  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
shortener_app/: config.py  crud.py  database.py  keygen.py  main.py  models.py  schemas.py
